@@ -1,6 +1,8 @@
 package org.investpro.investpro.ai;
 
-import org.investpro.investpro.model.Candle;
+
+import org.investpro.investpro.model.CandleData;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -10,7 +12,8 @@ public class InvestProFeatureExtractor {
     private static final int RSI_PERIOD = 14;
     private static final int EMA_PERIOD = 10;
 
-    public static List<Double> extractFeatures(List<Candle> candles) {
+    public static @NotNull List<Double> extractFeatures(List<CandleData> candles) {
+
         List<Double> features = new ArrayList<>();
 
         if (candles.size() < RSI_PERIOD + 2) {
@@ -19,24 +22,25 @@ public class InvestProFeatureExtractor {
         }
 
         // --- Extract Latest Candle Features ---
-        Candle last = candles.get(candles.size() - 1);
-        Candle prev = candles.get(candles.size() - 2);
+        CandleData last = candles.getLast();
+        CandleData prev = candles.get(candles.size() - 2);
 
         // 1. Price Movement
-        features.add(last.getClose().doubleValue());
-        features.add(last.getOpen().doubleValue());
-        features.add(last.getHigh().doubleValue());
-        features.add(last.getLow().doubleValue());
-        features.add(last.getVolume().doubleValue());
+        features.add(last.getClosePrice());//;;.doubleValue());
+        features.add(last.getOpenPrice());//.doubleValue());
+        features.add(last.getHighPrice());//.doubleValue());
+        features.add(last.getLowPrice());//.doubleValue());
+        features.add(last.getVolume());//.doubleValue());
 
         // 2. Candle body size
-        features.add(Math.abs(last.getClose().doubleValue() - last.getOpen().doubleValue()));
+        features.add(Math.abs(last.getClosePrice() - last.getOpenPrice()));
 
         // 3. Candle range (high - low)
-        features.add(last.getHigh().doubleValue() - last.getLow().doubleValue());
+        features.add(last.getHighPrice() - last.getLowPrice());
+        ;//.doubleValue());
 
         // 4. Close - Previous Close (momentum)
-        features.add(last.getClose().doubleValue() - prev.getClose().doubleValue());
+        features.add(last.getClosePrice() - prev.getClosePrice());
 
         // 5. Simple Moving Average (SMA)
         features.add(calculateSMA(candles, EMA_PERIOD));
@@ -53,36 +57,37 @@ public class InvestProFeatureExtractor {
         return features;
     }
 
-    private static double calculateSMA(List<Candle> candles, int period) {
+    private static double calculateSMA(List<CandleData> candles, int period) {
         if (candles.size() < period) return 0;
         return candles.subList(candles.size() - period, candles.size())
                 .stream()
-                .mapToDouble(c -> c.getClose().doubleValue())
+                .mapToDouble(CandleData::getClosePrice)//.doubleValue())
                 .average()
                 .orElse(0);
     }
 
-    private static double calculateEMA(List<Candle> candles, int period) {
+    private static double calculateEMA(List<CandleData> candles, int period) {
         if (candles.size() < period) return 0;
 
         double k = 2.0 / (period + 1);
-        double ema = candles.get(candles.size() - period).getClose().doubleValue();
+        double ema = candles.get(candles.size() - period).getClosePrice();
+        ;//)//.doubleValue();
 
         for (int i = candles.size() - period + 1; i < candles.size(); i++) {
-            double close = candles.get(i).getClose().doubleValue();
+            double close = candles.get(i).getClosePrice();//.doubleValue();
             ema = close * k + ema * (1 - k);
         }
         return ema;
     }
 
-    private static double calculateRSI(List<Candle> candles, int period) {
+    private static double calculateRSI(List<CandleData> candles, int period) {
         if (candles.size() <= period) return 50; // Neutral
 
         double gain = 0;
         double loss = 0;
 
         for (int i = candles.size() - period; i < candles.size(); i++) {
-            double change = candles.get(i).getClose().doubleValue() - candles.get(i - 1).getClose().doubleValue();
+            double change = candles.get(i).getClosePrice() - candles.get(i - 1).getClosePrice();
             if (change > 0) gain += change;
             else loss -= change;
         }
@@ -92,7 +97,7 @@ public class InvestProFeatureExtractor {
         return 100 - (100 / (1 + rs));
     }
 
-    private static double calculateMACD(List<Candle> candles, int shortPeriod, int longPeriod) {
+    private static double calculateMACD(List<CandleData> candles, int shortPeriod, int longPeriod) {
         double shortEMA = calculateEMA(candles, shortPeriod);
         double longEMA = calculateEMA(candles, longPeriod);
         return shortEMA - longEMA;
